# bingimage

./: README  README.md  daemon.py  wwwserver.py
client/: Makefile  bingimg_app.c  bingimg_app.h  bingimg_win.c  bingimg_win.h  cell.ui  client.c  gresource.xml  meson.build  network.c  network.h  window.ui
client/gobject/: example-person-private.h  example-person.c  example-person.h
db/: daemon.py  getbingimage.py  getbingpic.py
webserver/: webserver.py
